Update to preview 7

--- a/samples/ServerSideBlazor/ServerSideBlazor.csproj
+++ b/samples/ServerSideBlazor/ServerSideBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0-preview2" />
+    <PackageReference Include="FluentValidation" Version="8.5.0-preview4" />
   </ItemGroup>
 
   <ItemGroup>
