--- a/samples/Shared/SharedModels/SharedModels.csproj
+++ b/samples/Shared/SharedModels/SharedModels.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0-preview2" />
+    <PackageReference Include="FluentValidation" Version="8.5.0-preview4" />
   </ItemGroup>
 
 </Project>
