--- a/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
+++ b/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
@@ -2,13 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <IsPackable>true</IsPackable>
-    <LangVersion>7.3</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <RootNamespace>Blazored.FluentValidation</RootNamespace>
 
     <PackageId>Blazored.FluentValidation</PackageId>
-    <Version>1.1.1</Version>
+    <Version>1.1.2</Version>
     <Authors>Chris Sainty</Authors>
     <Description>A library for using FluentValidation with Blazor</Description>
     <Copyright>Copyright 2019 (c) Chris Sainty. All rights reserved.</Copyright>
@@ -22,7 +20,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.5.0-preview4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview7.19365.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-preview8.19405.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-preview8.19405.7" />
   </ItemGroup>
 
 </Project>
