Upgrade to .NET Core 3 RTM

--- a/samples/ServerSideBlazor/ServerSideBlazor.csproj
+++ b/samples/ServerSideBlazor/ServerSideBlazor.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0-preview5" />
+    <PackageReference Include="FluentValidation" Version="8.5.0" />
   </ItemGroup>
 
   <ItemGroup>
