--- a/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
+++ b/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Blazored.FluentValidation</RootNamespace>
 
     <PackageId>Blazored.FluentValidation</PackageId>
-    <Version>1.1.4</Version>
+    <Version>1.1.5</Version>
     <Authors>Chris Sainty</Authors>
     <Description>A library for using FluentValidation with Blazor</Description>
     <Copyright>Copyright 2019 (c) Chris Sainty. All rights reserved.</Copyright>
@@ -19,9 +19,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0-preview5" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-rc1.19457.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-rc1.19457.4" />
+    <PackageReference Include="FluentValidation" Version="8.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
