--- a/samples/ServerSideBlazor/ServerSideBlazor.csproj
+++ b/samples/ServerSideBlazor/ServerSideBlazor.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
   </ItemGroup>
 
   <ItemGroup>
