--- a/samples/Shared/SharedModels/SharedModels.csproj
+++ b/samples/Shared/SharedModels/SharedModels.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="9.0.0-preview1" />
+    <PackageReference Include="FluentValidation" Version="8.6.2" />
   </ItemGroup>
 
 </Project>
