--- a/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
+++ b/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
@@ -1,27 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
-    <RootNamespace>Blazored.FluentValidation</RootNamespace>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<RazorLangVersion>3.0</RazorLangVersion>
 
-    <PackageId>Blazored.FluentValidation</PackageId>
-    <Version>1.3.0</Version>
-    <Authors>Chris Sainty</Authors>
-    <Description>A library for using FluentValidation with Blazor</Description>
-    <Copyright>Copyright 2019 (c) Chris Sainty. All rights reserved.</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/blazored/FluentValidation</PackageProjectUrl>
-    <PackageIconUrl>https://avatars1.githubusercontent.com/u/39194025</PackageIconUrl>
-    <RepositoryUrl>https://github.com/blazored/FluentValidation</RepositoryUrl>
-    <PackageTags>Blazor FluentValidation Blazored Components Fluent Validation</PackageTags>
-    <Company />
-  </PropertyGroup>
+		<Authors>Chris Sainty</Authors>
+		<Company></Company>
+		<Copyright>Copyright 2020 (c) Chris Sainty. All rights reserved.</Copyright>
 
-  <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="9.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.5" />
-  </ItemGroup>
+		<Description>A library for using FluentValidation with Blazor</Description>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+		<!-- NuGet settings -->
+		<PackageId>Blazored.FluentValidation</PackageId>
+		<PackageTags>Blazor;FluentValidation;Fluent Validation;Blazored;Components;ASP.NET Core;CSharp;Web</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/Blazored/FluentValidation</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/Blazored/FluentValidation</RepositoryUrl>
+
+		<!-- SourceLink settings -->
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="9.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.5" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 </Project>
