--- a/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
+++ b/src/Blazored.FluentValidation/Blazored.FluentValidation.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
 
 		<Authors>Chris Sainty</Authors>
 		<Company></Company>
@@ -28,8 +27,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="9.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
