Added IoC test case to assembly scanning tests.

--- a/tests/Blazored.FluentValidation.Tests/Blazored.FluentValidation.Tests.csproj
+++ b/tests/Blazored.FluentValidation.Tests/Blazored.FluentValidation.Tests.csproj
@@ -36,6 +36,10 @@
 	  <ProjectReference Include="..\..\src\Blazored.FluentValidation\Blazored.FluentValidation.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="AsyncValidation\" />
+	</ItemGroup>
+
 
 
 </Project>
