task(build): Upgrade actions to v4. Run tests on pr workflow.
-v2 tasks are deprecated, replaced with v4
-Run unit tests in the PR workflow,.

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -10,6 +10,7 @@ env:
     NETCORE_VERSION: '8.0.x'
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
     DOTNET_CLI_TELEMETRY_OPTOUT: true
+    DOTNET_CONSOLE_ANSI_COLOR: true
     PROJECT_NAME: FluentValidation
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     NUGET_FEED: https://api.nuget.org/v3/index.json
@@ -21,10 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Setup .NET Core ${{ env.NETCORE_VERSION }}
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.NETCORE_VERSION }}
       env:
@@ -41,10 +42,10 @@ jobs:
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.NETCORE_VERSION }}
 
